--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Todo App by Francis</title>
+    <style>
+      body {
+        background: #11998e;
+      } /* fallback for old browsers */
+      body {
+        background: -webkit-linear-gradient(to right, #38ef7d, #11998e);
+      } /* Chrome 10-25, Safari 5.1-6 */
+      body {
+        background: linear-gradient(to right, #38ef7d, #11998e);
+      } /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    </style>
+    <title>Todo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
